# GazePointInterface

./: .gitignore  GazeSensorServer.py  README.md  gaze_sensor_server.py  pyproject.toml  setup.py
demo scripts/: API_example.py  GazepointAPI_vanilla.py  gaze_point.py  gaze_point_data_collection.py  gaze_video_generator.py  gaze_video_processor.py.py  gazepoint_sensor.py  gazepoint_visualization.py  test_socket_server.py  visualize.py  visualize_picture.py  visualize_video.py
gazepointinterface/: __init__.py
gazepointinterface/sim_client/: __init__.py  gaze_data_client.py
sim_client/: gaze_data_client.py  gaze_data_processor.py
