# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazepointinterface"
version = "0.1.0"
description = "GazePoint Interface with simulation support"
authors = [
    {name = "Dhanush"}
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
]